feat:waitlist params added to env config; refactor:better names

--- a/apps/api/.env.dev.example
+++ b/apps/api/.env.dev.example
@@ -3,6 +3,11 @@ DATABASE_URL_MIGRATION="postgres://postgres:postgres@localhost:5432/coredb"
 REDIS_URL="redis://redis:6379"
 ALLOWED_ORIGINS="" # URLs in comma seperated list
 
+# Application waitlist
+MAX_ACCEPTED_APPLICATIONS=500
+ACCEPT_FROM_WAITLIST_COUNT=50
+ACCEPT_FROM_WAITLIST_PERIOD="@every 72h"
+
 # For OAuth
 AUTH_DISCORD_CLIENT_ID=
 AUTH_DISCORD_CLIENT_SECRET=
