--- a/infra/docker-compose.api.yml
+++ b/infra/docker-compose.api.yml
@@ -131,6 +131,18 @@ services:
       retries: 5
       start_period: 5s
 
+  asynqmon:
+    image: hibiken/asynqmon:latest
+    platform: linux/amd64
+    ports:
+      - "6767:6767"
+    environment:
+      - REDIS_ADDR=redis:6379
+      - PORT=6767
+    depends_on:
+      - redis-dev
+
+
 volumes:
   redis_data:
   redis_data_dev:
