--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-router": "^1.131.47",
     "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "@yudiel/react-qr-scanner": "^2.5.0",
     "axios": "^1.9.0",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
