fix: remove useless intents

--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -102,6 +102,16 @@ components:
       required:
       - name
       type: object
+    handlers.EventCheckInRequest:
+      properties:
+        rfid:
+          type: string
+        user_id:
+          type: string
+      required:
+      - rfid
+      - user_id
+      type: object
     handlers.NullableEventRole:
       properties:
         assigned_at:
@@ -376,6 +386,8 @@ components:
           type: string
         user_id:
           type: string
+        waitlist_join_time:
+          type: string
       required:
       - application
       - assigned_reviewer_id
@@ -388,6 +400,7 @@ components:
       - submitted_at
       - updated_at
       - user_id
+      - waitlist_join_time
       type: object
     sqlc.ApplicationStatus:
       enum:
@@ -453,6 +466,16 @@ components:
       x-enum-varnames:
       - AuthUserRoleUser
       - AuthUserRoleSuperuser
+    sqlc.BatRunStatus:
+      enum:
+      - running
+      - completed
+      - failed
+      type: string
+      x-enum-varnames:
+      - BatRunStatusRunning
+      - BatRunStatusCompleted
+      - BatRunStatusFailed
     sqlc.Event:
       properties:
         application_close:
@@ -723,6 +746,34 @@ components:
       - updated_at
       - website_url
       type: object
+    sqlc.GetRunsByEventIdRow:
+      properties:
+        accepted_applicants:
+          items:
+            type: string
+          type: array
+          uniqueItems: false
+        completed_at:
+          type: string
+        created_at:
+          type: string
+        id:
+          type: string
+        rejected_applicants:
+          items:
+            type: string
+          type: array
+          uniqueItems: false
+        status:
+          $ref: '#/components/schemas/sqlc.NullBatRunStatus'
+      required:
+      - accepted_applicants
+      - completed_at
+      - created_at
+      - id
+      - rejected_applicants
+      - status
+      type: object
     sqlc.JoinRequestStatus:
       enum:
       - PENDING
@@ -782,6 +833,17 @@ components:
           type: boolean
       required:
       - application_status
+      - valid
+      type: object
+    sqlc.NullBatRunStatus:
+      properties:
+        bat_run_status:
+          $ref: '#/components/schemas/sqlc.BatRunStatus'
+        valid:
+          description: Valid is true if BatRunStatus is not NULL
+          type: boolean
+      required:
+      - bat_run_status
       - valid
       type: object
     sqlc.NullEventRoleType:
@@ -1338,6 +1400,34 @@ paths:
       summary: Submit application review
       tags:
       - Application
+  /events/{eventId}/application/accept-acceptance:
+    patch:
+      description: Sets application status from accepted to rejected
+      parameters:
+      - description: ID of the event to join the waitlist for
+        in: path
+        name: eventId
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Acceptance withdrawn joined successfully
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Bad request: invalid event ID'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server error: failed to accept'
+      summary: Accept an acceptance after being accepted to an event.
+      tags:
+      - Application Event
   /events/{eventId}/application/assign-reviewers:
     post:
       description: Assigns applications for an event to reviewers for the application
@@ -1454,6 +1544,34 @@ paths:
                 $ref: '#/components/schemas/response.ErrorResponse'
           description: 'Server Error: error handling download resume request'
       summary: Download the user's uploaded resume from their event application
+      tags:
+      - Application
+  /events/{eventId}/application/join-waitlist:
+    patch:
+      description: Adds a waitlist join time to application. Sets status to waitlisted
+      parameters:
+      - description: ID of the event to join the waitlist for
+        in: path
+        name: eventId
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Event Waitlist joined successfully
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Bad request: invalid event ID'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server error: failed to join waitlist'
+      summary: Join event waitlist after rejected application status.
       tags:
       - Application
   /events/{eventId}/application/reset-reviews:
@@ -1607,6 +1725,131 @@ paths:
       summary: Submit Application
       tags:
       - Application
+  /events/{eventId}/application/withdraw-acceptance:
+    patch:
+      description: Sets application status from accepted to rejected
+      parameters:
+      - description: ID of the event to join the waitlist for
+        in: path
+        name: eventId
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Acceptance withdrawn joined successfully
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Bad request: invalid event ID'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server error: failed to withdraw'
+      summary: Withdraw an acceptance after being accepted to an event.
+      tags:
+      - Application
+  /events/{eventId}/bat-runs:
+    delete:
+      description: Delete an existing event
+      parameters:
+      - description: Run ID
+        in: path
+        name: eventId
+        required: true
+        schema:
+          format: uuid
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "204":
+          description: OK - Run deleted
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server Error: Something went terribly wrong on our end.'
+      summary: Delete an event
+      tags:
+      - Bat
+    get:
+      description: Gets BatRuns.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/sqlc.GetRunsByEventIdRow'
+                type: array
+          description: 'OK: BatRuns returned'
+      summary: Get BatRuns
+      tags:
+      - Bat
+  /events/{eventId}/checkin:
+    post:
+      description: Staff route for checking a user to an event. The user to check
+        in must be an attendee and have never been checked in yet.
+      parameters:
+      - description: The authenticated session token/id
+        in: cookie
+        name: sh_session_id
+        required: true
+        schema:
+          type: string
+      - description: The ID of the event
+        in: path
+        name: event_id
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/handlers.EventCheckInRequest'
+              description: Event check in data
+              summary: request
+        description: Event check in data
+        required: true
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Malformed request body.
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Unauthenticated: Requester is not currently authenticated.'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Something went seriously wrong.
+      summary: Check a user into an event
+      tags:
+      - Admissions
   /events/{eventId}/interest:
     post:
       description: Submit email for event interest/mailing list
@@ -1682,6 +1925,38 @@ paths:
       summary: Retrieves general information about the event
       tags:
       - Event
+  /events/{eventId}/review-status:
+    get:
+      description: Check if application reviews complete
+      parameters:
+      - description: Event ID
+        in: path
+        name: eventId
+        required: true
+        schema:
+          format: uuid
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+          description: OK
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Server Error: Something went terribly wrong on our end.'
+      summary: Check if application reviews complete
+      tags:
+      - Bat
   /events/{eventId}/role:
     get:
       description: Get current user's role for a specific event
