Check in scanner (#284)
* feat: qr code generation for frontend

* temp: adding api for checkin

* temp: some frontend changes

* fix: remove useless intents

* temp: get user with event info

* temp: modal for checking in and rfid hidden text input

* temp: check in modal;

* feat: check in scanner

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-router": "^1.131.47",
     "@tanstack/react-table": "^8.21.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "@yudiel/react-qr-scanner": "^2.5.0",
     "axios": "^1.9.0",
     "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
@@ -51,6 +52,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-pdf": "^10.2.0",
+    "react-qr-code": "^2.0.18",
     "react-select": "^5.10.2",
     "react-stately": "^3.39.0",
     "react-toastify": "^11.0.5",
