Stanley/basic bot structure (#216)
* chore(env): setup development and production python venvs

* feat: add message trigger command for bot

* Create readme.md (#3)

* chore: complete merge conflict and rebase

* chore: rewrite readme

* feat: add regex to identify potential scam/spam messages in antiSpam cog

* refactor: organize and break up functions, add detailed comments, add remove role command

* refactor: include direction in readme to select interpreter and add any pycache or venvs file types to gitignore

* feat: create panel command and reusable buttons added

* feat: update anti_spam to have new spam detection, add support cog with request features

* add mentor role functions and rework ticket panel

* feat: implement round-robin for pinging available mentors

* feat: make threads archived, add limits to user inputs, clear selection options

* feat: add mod command to grant user access to private vcs

* feat: add command to create a support vc

* fix: create the logs folder if it does not exist

* feat: add command to prompt gemini and integrate uv as new package manager

* chore: add llm command since it did not add in merge

* feat: update readme with new uv commands

* feat: add structured output for llm

* feat: make mod role based on perms and not rely on config

* chore: add docstrings for each function describing their purposes

* feat: create first iteration of workflow for discord bot

* feat: push workflow file

* fix: update dev yml file for discord

* feat: add join button to reports embed

* feat: create fastapi backend to add check user in server api

* refactor: abstract role names to roles_config file

* feat: update round robin logic and renew api token

* feat: create announcement command

* fix: update announcemnet command to allow mentions

* refactor: rename support vcs category

* fix: add is mod slash function back

* Update .gitignore

* Delete apps/discord-bot/uv.lock

---------

Co-authored-by: Phoenix <71522316+h1divp@users.no

--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -23,7 +23,24 @@ services:
 
   dev-redis:
     image: redis:8.0
-    command: ["redis-server", "--appendonly", "no", "--port", "6380", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
+    command:
+      [
+        "redis-server",
+        "--appendonly",
+        "no",
+        "--port",
+        "6380",
+        "--maxmemory",
+        "512mb",
+        "--maxmemory-policy",
+        "allkeys-lru",
+      ]
     ports:
       - 6380:6380
     attach: false
+
+  dev-discord:
+    image: ghcr.io/swamphacks/core-discord:dev
+    restart: always
+    env_file:
+      - ./secrets/.env.dev.discord
