--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     env_file:
       - ./secrets/.env.api
 
-  
   email-worker:
     image: ghcr.io/swamphacks/core-email-worker:latest
     restart: always
@@ -16,7 +15,16 @@ services:
 
   redis:
     image: redis:8.0
-    command: ["redis-server", "--appendonly", "no", "--maxmemory", "512mb", "--maxmemory-policy", "allkeys-lru"]
+    command:
+      [
+        "redis-server",
+        "--appendonly",
+        "no",
+        "--maxmemory",
+        "512mb",
+        "--maxmemory-policy",
+        "allkeys-lru",
+      ]
     ports:
       - 6379:6379
     attach: false
