feat: qr image generation, upload, link generation, and welcome email queue

--- a/apps/api/.env.dev.example
+++ b/apps/api/.env.dev.example
@@ -13,6 +13,9 @@ AUTH_DISCORD_CLIENT_ID=
 AUTH_DISCORD_CLIENT_SECRET=
 AUTH_DISCORD_REDIRECT_URI="http://localhost:8080/auth/callback"
 
+# CF
+CORE_BUCKETS_USER_QRCODES_BASE_URL=
+
 # For cookies
 COOKIE_DOMAIN=localhost
 COOKIE_SECURE=false
