feat: github workflow and docker config

--- a/apps/discord-bot/Dockerfile
+++ b/apps/discord-bot/Dockerfile
@@ -1,19 +1,16 @@
 FROM python:3.12-slim
 
-# Install prerequisites for uv
 RUN apt-get update && apt-get install -y curl git
 
-# Install uv by Astral
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
-# Set working directory
 WORKDIR /app
 
-# Copy bot files
 COPY . .
 
-# Environment variables are handled by docker-compose
 ENV PATH="/root/.local/bin:$PATH"
 
-# Default command to run bot
+CMD ["uv", "sync"]
+
 CMD ["uv", "run", "main.py"]
+CMD ["uv", "run", "api_server.py"]
