--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,16 @@ services:
     depends_on:
       - api
 
+  discord:
+    build:
+      context: ./apps/discord-bot
+      dockerfile: Dockerfile
+      target: dev
+    # ports:
+      # - "5173:5173"
+    environment:
+      - NODE_ENV=development
+
   asynqmon:
     image: hibiken/asynqmon:latest
     platform: linux/amd64
