--- a/apps/discord-bot/Dockerfile
+++ b/apps/discord-bot/Dockerfile
@@ -1,16 +1,19 @@
 FROM python:3.12-slim
 
-RUN apt-get update && apt-get install -y curl git
-
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+RUN pip install uv
 
 WORKDIR /app
 
+COPY pyproject.toml .
+COPY uv.lock .
+
+# ENV PATH="/root/.local/bin:$PATH"
+
+RUN uv sync --frozen --no-cache --all-extras
+
 COPY . .
 
-ENV PATH="/root/.local/bin:$PATH"
-
-CMD ["uv", "sync"]
+EXPOSE 3000
 
 CMD ["uv", "run", "main.py"]
-CMD ["uv", "run", "api_server.py"]
+# CMD ["uv", "run", "api_server.py"]
