--- a/apps/discord-bot/.env.example
+++ b/apps/discord-bot/.env.example
@@ -1,8 +1,8 @@
 DISCORD_TOKEN=
 API_KEY=
+GEMINI_API_KEY=
 API_URL=https://api.swamphacks.com
 SESSION_COOKIE=
 WEBHOOK_URL=
 WEBHOOK_PORT=
-GEMINI_API_KEY=
-PORT=
+EVENT_ID=
