feat: production github workflow and docker config for discord bot (#295)
* chore(env): setup development and production python venvs

* feat: add message trigger command for bot

* Create readme.md (#3)

* chore: complete merge conflict and rebase

* chore: rewrite readme

* feat: add regex to identify potential scam/spam messages in antiSpam cog

* refactor: organize and break up functions, add detailed comments, add remove role command

* refactor: include direction in readme to select interpreter and add any pycache or venvs file types to gitignore

* feat: create panel command and reusable buttons added

* feat: update anti_spam to have new spam detection, add support cog with request features

* add mentor role functions and rework ticket panel

* feat: implement round-robin for pinging available mentors

* feat: make threads archived, add limits to user inputs, clear selection options

* feat: add mod command to grant user access to private vcs

* feat: add command to create a support vc

* fix: create the logs folder if it does not exist

* feat: add command to prompt gemini and integrate uv as new package manager

* chore: add llm command since it did not add in merge

* feat: update readme with new uv commands

* feat: add structured output for llm

* feat: make mod role based on perms and not rely on config

* chore: add docstrings for each function describing their purposes

* feat: create first iteration of workflow for discord bot

* feat: push workflow file

* fix: update dev yml file for discord

* feat: add join button to reports embed

* feat: create fastapi backend to add check user in server api

* refactor: abstract role names to roles_config file

* feat: update round robin logic and renew api token

* feat: create announcement command

* fix: update announcemnet command to allow mentions

* refactor: rename support vcs category

* fix: add is mod slash function back

* Update .gitignore

* Delete apps/discord-bot/uv.lock

* feat: add close but

--- a/apps/discord-bot/Dockerfile
+++ b/apps/discord-bot/Dockerfile
@@ -1,19 +1,19 @@
 FROM python:3.12-slim
 
-# Install prerequisites for uv
-RUN apt-get update && apt-get install -y curl git
+RUN pip install uv
 
-# Install uv by Astral
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-
-# Set working directory
 WORKDIR /app
 
-# Copy bot files
+COPY pyproject.toml .
+COPY uv.lock .
+
+# ENV PATH="/root/.local/bin:$PATH"
+
+RUN uv sync --frozen --no-cache --all-extras
+
 COPY . .
 
-# Environment variables are handled by docker-compose
-ENV PATH="/root/.local/bin:$PATH"
+EXPOSE 3000
 
-# Default command to run bot
 CMD ["uv", "run", "main.py"]
+# CMD ["uv", "run", "api_server.py"]
